# api-axum

./: Cargo.toml  application.toml  rust-toolchain.toml
itoo_config/: Cargo.toml
itoo_config/src/: config.rs  lib.rs
itoo_redis/: Cargo.toml
itoo_redis/src/: config.rs  error.rs  lib.rs  manager.rs  redis.rs
itoo_redis/src/single/: mod.rs
itoo_utils/: Cargo.toml
itoo_utils/src/: error.rs  lib.rs  utils.rs
itoo_utils/src/encrypt/: rsa.rs
itoo_web/: Cargo.toml
itoo_web/src/: lib.rs  main.rs
itoo_web/src/api/: user.rs
itoo_web/src/config/: error.rs  log.rs  mod.rs  response.rs
itoo_web/src/init/: config.rs  mod.rs  redis.rs
itoo_web/src/routers/: api.rs
