[package]
name = "itoo_redis"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redis = {version="0.21", features = ["r2d2","tokio-comp","connection-manager","cluster"]}
r2d2 = "0.8"
thiserror = "1"
#序列化
serde = { version = "1", features = ["derive"] }

itoo_config = {path="../itoo_config"}