[package]
name = "itoo_web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1",features=["full"]}
#对象存储
state = { version = "0.5", features = ["tls"] }
#log
log = "0.4"
fast_log = { version="1.5", features = ["lz4","zip", "gzip"]}
#错误处理
thiserror = "1"

#序列化
serde = { version = "1", features = ["derive"] }

#配置
itoo_config = {path="../itoo_config"}
itoo_redis = {path = "../itoo_redis"}